<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MyProfile">
    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/me"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/margin_view"
        android:layout_marginStart="@dimen/margin_view"
        android:text="@string/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginLeft="@dimen/dimenspacing"
        android:layout_marginStart="@dimen/dimenspacing"
        android:text="@string/track"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginLeft="@dimen/dimenspacing"
        android:layout_marginStart="@dimen/dimenspacing"
        android:text="@string/country"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimenspacing"
        android:layout_marginStart="@dimen/dimenspacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/email"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimenspacing"
        android:layout_marginStart="@dimen/dimenspacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/phonenumber"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginLeft="@dimen/dimenspacing"
        android:layout_marginStart="@dimen/dimenspacing"
        android:layout_height="wrap_content"
        android:text="@string/slack_username"/>

</LinearLayout>